# c5-sentiment-aggregator

./: .gitignore  DEPLOY.md  README.md  STATE.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: cli-demo.txt
scripts/: run_demo.py
src/c5_sentiment_aggregator/: __init__.py  aggregate.py  backtest.py  news.py  reddit.py  score.py  storage.py
tests/: test_aggregate_backtest.py  test_reddit.py  test_score.py  test_smoke.py  test_storage.py
